// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Label/HeaderLabel Header Label 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-t0zib5-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 makeStyles-label css-1os2m0i-MuiTypography-root"
      >
        name
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-dcx4qa-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 makeStyles-value css-1ezega9-MuiTypography-root"
        >
          value
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label/HeaderLabel Header Label Tool Tip 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-t0zib5-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 makeStyles-label css-1os2m0i-MuiTypography-root"
      >
        name
      </p>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg makeStyles-container css-cnms5y-MuiContainer-root"
      >
        <span />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item css-dcx4qa-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 makeStyles-value css-1ezega9-MuiTypography-root"
        >
          value
        </p>
      </div>
    </div>
  </div>
</div>
`;
